pkg/safeguards/lib/manifests/v2.0.0/container-enforce-probes/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV2ContainerEnforceProbes
metadata:
  name: v2-container-enforce-probes
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    enforceProbes : ["readinessProbe","livenessProbe"]
    excludedContainers: []
    excludedImages: []
